[gd_scene load_steps=11 format=3 uid="uid://nyj75rp3qjqr"]

[ext_resource type="Texture2D" uid="uid://b3qpdvwck8cap" path="res://Assets/Game Boy Advance - Pokemon FireRed LeafGreen - Battle Backgrounds.png" id="1_u70xr"]
[ext_resource type="Script" path="res://Creatures/base_battle.gd" id="1_unghs"]
[ext_resource type="Script" path="res://CurrentPokemon.gd" id="2_ch8m7"]
[ext_resource type="Script" path="res://OpponentPokemon.gd" id="3_2m0d1"]
[ext_resource type="Resource" uid="uid://blx00y6s50u1s" path="res://Creatures/Bulbasaur.tres" id="3_m3fg5"]
[ext_resource type="Texture2D" uid="uid://cnu53q3kis73k" path="res://Assets/Game Boy Advance - Pokemon FireRed LeafGreen - Trainers.png" id="4_ixybx"]
[ext_resource type="Texture2D" uid="uid://drksyxgpcq1lu" path="res://Assets/Game Boy Advance - Pokemon FireRed LeafGreen - HP Bars & In-battle Menu.png" id="7_s1cvn"]

[sub_resource type="Animation" id="Animation_rmchb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrainerLayer/TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 0)]
}

[sub_resource type="Animation" id="Animation_ujsge"]
resource_name = "TrainerTransition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrainerLayer/TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1152, 0), Vector2(912, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1f1td"]
_data = {
"RESET": SubResource("Animation_rmchb"),
"TrainerTransition": SubResource("Animation_ujsge")
}

[node name="BaseBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_unghs")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
process_mode = 4
layer = -4

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
offset_right = 240.0
offset_bottom = 112.0
texture = ExtResource("1_u70xr")

[node name="PokemonLayer" type="CanvasLayer" parent="."]

[node name="CurrentPokemon" type="Node2D" parent="PokemonLayer"]
script = ExtResource("2_ch8m7")
CPResource = ExtResource("3_m3fg5")

[node name="Sprite2D" type="Sprite2D" parent="PokemonLayer/CurrentPokemon"]
position = Vector2(520, 440)
scale = Vector2(5, 5)

[node name="OpponentPokemon" type="Node2D" parent="PokemonLayer"]
position = Vector2(840, 336)
script = ExtResource("3_2m0d1")
OPResource = ExtResource("3_m3fg5")

[node name="TrainerLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="TrainerLayer"]
offset_left = 1152.0
offset_right = 1296.0
offset_bottom = 368.0
texture = ExtResource("4_ixybx")

[node name="OptionLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Attack" type="Button" parent="OptionLayer"]
offset_left = 256.0
offset_top = 456.0
offset_right = 512.0
offset_bottom = 528.0
action_mode = 0
button_mask = 3
text = "Attack"

[node name="Items" type="Button" parent="OptionLayer"]
offset_left = 256.0
offset_top = 560.0
offset_right = 512.0
offset_bottom = 632.0
text = "Items"

[node name="Run" type="Button" parent="OptionLayer"]
offset_left = 536.0
offset_top = 560.0
offset_right = 792.0
offset_bottom = 632.0
text = "Run"

[node name="Pokemon" type="Button" parent="OptionLayer"]
offset_left = 536.0
offset_top = 456.0
offset_right = 792.0
offset_bottom = 528.0
text = "Pokemon"

[node name="BattleButtons" type="CanvasLayer" parent="."]
visible = false

[node name="Move1" type="Button" parent="BattleButtons"]
offset_left = 256.0
offset_top = 456.0
offset_right = 512.0
offset_bottom = 528.0
text = "Placeholder"

[node name="Move2" type="Button" parent="BattleButtons"]
offset_left = 536.0
offset_top = 456.0
offset_right = 792.0
offset_bottom = 528.0
text = "Placeholder"

[node name="Move3" type="Button" parent="BattleButtons"]
offset_left = 256.0
offset_top = 560.0
offset_right = 512.0
offset_bottom = 632.0
text = "Placeholder"

[node name="Move4" type="Button" parent="BattleButtons"]
offset_left = 536.0
offset_top = 560.0
offset_right = 792.0
offset_bottom = 632.0
text = "Placeholder"

[node name="Label" type="Label" parent="."]
process_mode = 4
layout_mode = 0
offset_top = 512.0
offset_right = 220.0
offset_bottom = 576.0
text = "What will your Pokemon do?"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1f1td")
}

[node name="HpLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="HpLayer"]
offset_left = 472.0
offset_top = 312.0
offset_right = 880.0
offset_bottom = 456.0
texture = ExtResource("7_s1cvn")

[node name="TextureRect2" type="TextureRect" parent="HpLayer"]
offset_right = 408.0
offset_bottom = 144.0
texture = ExtResource("7_s1cvn")

[node name="ProgressBar" type="ProgressBar" parent="HpLayer"]
offset_left = 656.0
offset_top = 376.0
offset_right = 856.0
offset_bottom = 400.0

[node name="ProgressBar2" type="ProgressBar" parent="HpLayer"]
offset_left = 184.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 91.0

[connection signal="pressed" from="OptionLayer/Attack" to="." method="_on_attack_pressed"]
